// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Checkbox Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<div>
  <input
    type=\\"checkbox\\"
    id=\\"one\\"
    color=\\"purple\\"
    name=\\"demo\\"
    class=\\"drac-checkbox drac-checkbox-purple\\"
    checked=\\"\\"
  /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
</div>
",
  "react": "<div>
  <Checkbox id=\\"one\\" defaultChecked={true} color=\\"purple\\" name=\\"demo\\" />
  <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
    Checked
  </label>
</div>;
",
  "title": "Usage",
}
`;

exports[`Site: Checkbox Colors 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"white\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-white\\"
      checked=\\"\\"
    /><label for=\\"white\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"cyan\\"
      color=\\"cyan\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-cyan\\"
      checked=\\"\\"
    /><label for=\\"cyan\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"green\\"
      color=\\"green\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-green\\"
      checked=\\"\\"
    /><label for=\\"green\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"orange\\"
      color=\\"orange\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-orange\\"
      checked=\\"\\"
    /><label for=\\"orange\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"pink\\"
      color=\\"pink\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-pink\\"
      checked=\\"\\"
    /><label for=\\"pink\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"purple\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-purple\\"
      checked=\\"\\"
    /><label for=\\"purple\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"red\\"
      color=\\"red\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-red\\"
      checked=\\"\\"
    /><label for=\\"red\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"yellow\\"
      color=\\"yellow\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-yellow\\"
      checked=\\"\\"
    /><label for=\\"yellow\\" class=\\"drac-text drac-text-white\\">Checkbox</label>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"white\\" defaultChecked={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"white\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"cyan\\" defaultChecked={true} color=\\"cyan\\" name=\\"demo\\" />
    <label htmlFor=\\"cyan\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"green\\" defaultChecked={true} color=\\"green\\" name=\\"demo\\" />
    <label htmlFor=\\"green\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"orange\\" defaultChecked={true} color=\\"orange\\" name=\\"demo\\" />
    <label htmlFor=\\"orange\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"pink\\" defaultChecked={true} color=\\"pink\\" name=\\"demo\\" />
    <label htmlFor=\\"pink\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"purple\\" defaultChecked={true} color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"purple\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"red\\" defaultChecked={true} color=\\"red\\" name=\\"demo\\" />
    <label htmlFor=\\"red\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"yellow\\" defaultChecked={true} color=\\"yellow\\" name=\\"demo\\" />
    <label htmlFor=\\"yellow\\" className=\\"drac-text drac-text-white\\">
      Checkbox
    </label>
  </div>
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Checkbox Disabled 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"one\\"
      disabled=\\"\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-white\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"two\\"
      disabled=\\"\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-checkbox drac-checkbox-white\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Unchecked</label>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Checkbox
      id=\\"one\\"
      disabled={true}
      defaultChecked={true}
      color=\\"white\\"
      name=\\"demo\\"
    />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Checked
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Checkbox id=\\"two\\" disabled={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Unchecked
    </label>
  </div>
</div>;
",
  "title": "Disabled",
}
`;
